# flowgaia.github.io

./: .gitignore  AGENTS.md  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  config.yaml  deploy.sh  index.html  manifest.json  package-lock.json  package.json  service-worker.js  sw.js  vite.config.js
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-commit
public/: manifest.json  music.json  sw.js
rust-core/: Cargo.toml
rust-core/src/: controller.rs  lib.rs  model.rs  queue.rs  search.rs  shuffle.rs
rust-core/tests/: playback_tests.rs  queue_tests.rs
scripts/: app.js  config-loader.js  download-manager.js  generate-music-json.js  playback-state.js  player-view.js  player.js  storage-manager.js
src/: app.css  app.js  audio.js  download-manager.js  event-bus.js  media-session.js  storage.js  tabs.js
src/views/: albums.js  downloaded.js  full-player.js  mini-player.js  playlist.js  queue.js
styles/: main.css  player.css  sacred-theme.css
